--- a/dashboard/src/app/pages/sign-in/sign-in.component.html
+++ b/dashboard/src/app/pages/sign-in/sign-in.component.html
@@ -1,1 +1,29 @@
-<p>sign-in works!</p>
+<div class="login-container">
+    <div class="login-left">
+<form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="signup-form">
+    <img src="assets/images/images.png" alt="Logo" class="form-logo">
+  
+    <div class="form-group">
+      <label for="email">Email :</label>
+      <input id="email" formControlName="email" type="text" class="form-input" placeholder="Email" required />
+    </div>
+  
+    <div class="form-group">
+      <label for="password">Mot de passe :</label>
+      <input id="password" formControlName="password" type="password" class="form-input" placeholder="******" required />
+    </div>
+  
+    <button type="submit" [disabled]="signInForm.invalid || isSubmitting" class="submit-button">
+      Se connecter
+    </button>
+  
+    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
+  </form>
+</div>
+  
+<div class="login-right">
+  <!-- Right section with background image -->
+</div>
+</div>
+
+  
