--- a/dashboard/src/app/layouts/topbar/topbar.component.html
+++ b/dashboard/src/app/layouts/topbar/topbar.component.html
@@ -5,19 +5,19 @@
       <div class="navbar-brand-box">
         <a routerLink="/" class="logo logo-dark">
           <span class="logo-sm">
-            <img src="assets/images/logo-light.png" alt="" height="30px">
+            <img src="assets/images/images.png" alt="" height="70px" width="100px">
           </span>
           <span class="logo-lg">
-            <img src="assets/images/logo-prodelec-2024-light.png" alt="" height="50px">
+            <img src="assets/images/images.png" alt="" height="90px" width="100px">
           </span>
         </a>
 
         <a routerLink="/" class="logo logo-light">
           <span class="logo-sm">
-            <img src="assets/images/logo-dark.png" alt="" height="30px" >
+            <img src="assets/images/images.png" alt="" height="70px" width="100px">
           </span>
           <span class="logo-lg">
-            <img src="assets/images/logo-prodelec-2024-dark.png" alt="" height="50px">
+            <img src="assets/images/images.png" alt="" height="90px" width="100px">
           </span>
         </a>
       </div>
@@ -137,7 +137,7 @@
       <div class="dropdown d-inline-block" dropdown>
         <button type="button" class="btn header-item" dropdownToggle id="page-header-user-dropdown">
           <img class="rounded-circle header-profile-user" src="assets/images/users/avatar-2.jpg" alt="Header Avatar">
-          <span class="d-none d-xl-inline-block ms-1">{{ userType === 'user' ? '' : 'Worker ' }}{{ user.firstName }} {{ user.lastName }}</span>
+        <!--  <span class="d-none d-xl-inline-block ms-1">{{ userType === 'user' ? '' : 'Worker ' }}{{ user.firstName }} {{ user.lastName }}</span>-->
           <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-end" *dropdownMenu>
