--- a/dashboard/src/app/pages/sign-in/sign-in.component.scss
+++ b/dashboard/src/app/pages/sign-in/sign-in.component.scss
@@ -98,3 +98,20 @@
     background-size: cover;
     background-position: center;
 }
+.redirect-link {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 14px;
+    color: #555;
+  }
+  
+  .signup-link {
+    color: #007bff;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  
+  .signup-link:hover {
+    text-decoration: underline;
+  }
+  
