--- a/dashboard/src/app/layouts/topbar/topbar.component.html
+++ b/dashboard/src/app/layouts/topbar/topbar.component.html
@@ -110,6 +110,10 @@
             </a>
           </ngx-simplebar>
           <div class="p-2 border-top d-grid">
+            <a class="btn btn-sm btn-link font-size-14 text-center" [routerLink]="'/notifications'">
+              <i class="mdi mdi-arrow-right-circle me-1"></i> 
+              <span>{{ 'HEADER.NOTIFICATIONS.VIEW_ALL' | translate }}</span>
+            </a>
           <!--  <a class="btn btn-sm btn-link font-size-14 text-center" href="javascript:void(0)">
               <i class="mdi mdi-arrow-right-circle me-1"></i> <span key="t-view-more">{{ 'HEADER.NOTIFICATIONS.LOAD_MORE' | translate }}</span>
             </a>-->
@@ -120,7 +124,7 @@
       <!-- User Profile Dropdown -->
       <div class="dropdown d-inline-block" dropdown>
         <button type="button" class="btn header-item" dropdownToggle id="page-header-user-dropdown">
-          <img class="rounded-circle header-profile-user" src="assets/images/users/avatar-2.jpg" alt="Header Avatar">
+          <img class="rounded-circle header-profile-user" [src]="logoUrl" alt="Header Avatar">
           <span class="d-none d-xl-inline-block ms-1">
             {{ userType === 'admin' ? 'Admin ' : userType === 'entreprise' ? 'Entreprise ' : userType === 'employe' ? 'Employé ' : '' }}
             {{ user.email }}
