--- a/dashboard/src/app/pages/employe/list-employe-entreprise/list-employe-entreprise.component.html
+++ b/dashboard/src/app/pages/employe/list-employe-entreprise/list-employe-entreprise.component.html
@@ -1,1 +1,123 @@
-<p>list-employe-entreprise works!</p>
+<div class="container-fluid">
+    <app-page-title title="Commandes"></app-page-title>
+    <div class="d-flex flex-column col-sm-12 col-md-4">
+    
+        <div class="search-box me-2 mb-2 d-inline-block">
+          <div class="position-relative">
+            <input type="text" class="form-control" autocomplete="off" id="searchTableList" placeholder="Rechercher..." [(ngModel)]="searchEmploye" (input)="searchEmployeBy()">
+            <i class="bx bx-search-alt search-icon"></i>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex justify-content-end">
+        <button type="button" class="btn btn-success" (click)="addModal()">+ Ajouter</button>
+        
+      </div>
+    </div>
+      <div class="table-responsive mb-0">
+        <table class="table align-middle table-nowrap dt-responsive nowrap w-100 table-check" id="order-list">
+          <thead class="table-light">
+            <tr >
+              <th class="align-middle">Email</th>
+              <th class="align-middle">État administrative</th>
+              <th class="align-middle">Date de création</th>
+              <th class="align-middle">Action</th>
+            </tr>
+          </thead>
+          <tbody *ngFor="let data of employes | paginate: { itemsPerPage: itemsPerPage, currentPage: p }; let i = index;" id="o_{{data.id}}">
+            <tr>
+              <td>{{data.email}}</td>
+              <td>
+                <span class="badge badge-pill font-size-11"
+                      [ngClass]="{ 
+                        'badge-soft-warning': !data.isverified,
+                        'badge-soft-success': data.isverified
+                      }">
+                  {{data.annuler ? 'Vérifié' : 'En attente'}}
+                </span>
+              </td>
+              <td>{{data.createdAt | date:'yyyy-MM-dd HH:mm'}}</td>
+              
+              
+              <td>
+                <div class="d-flex gap-3">
+                  <a href="javascript:void(0);" class="text-success" (click)="editModal(data.idOrder)"><i class="mdi mdi-pencil font-size-18"></i></a>
+                  <a *ngIf="userType === 'entreprise'" href="javascript:void(0);" class="text-danger" (click)="bloquer(data.id)">
+                    <i class="mdi font-size-18" [ngClass]="{'mdi-cancel': data.status, 'text-primary mdi-undo': !data.status}"></i>
+                  </a>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        
+      </div>
+      <div class="pagination-container">
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
+      </div>
+
+      <!--------------------------------------------------------------------------------------------->
+
+      <div bsModal #add="bs-modal" class="modal fade" id="add" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Ajouter un employé</h5>
+              <button type="button" class="btn-close" id="close-modal" (click)="add.hide()"></button>
+            </div>
+            <div class="modal-body">
+              <form (ngSubmit)="onAddEmploye()" [formGroup]="addForm" class="needs-validation createorder-form" id="createorder-form" novalidate>
+                <div class="row">
+                  <!-- Email -->
+                  <div class="col-lg-12">
+                    <div class="mb-3">
+                      <label for="email-field" class="form-label">Email</label>
+                      <input type="email" id="email-field" class="form-control" required formControlName="email" />
+                    </div>
+                  </div>
+      
+                  <!-- Password -->
+                  <div class="col-lg-12">
+                    <div class="mb-3">
+                      <label for="password-field" class="form-label">Mot de passe</label>
+                      <input type="password" id="password-field" class="form-control" required formControlName="password" />
+                    </div>
+                  </div>
+      
+                  <!-- Modules -->
+                  <div class="col-lg-12">
+                    <div class="mb-3">
+                      <label for="module-select" class="form-label">Modules</label>
+                      <select
+                        id="module-select"
+                        class="form-control"
+                        multiple
+                        formControlName="moduleIds"
+                        (change)="onModuleChange($event.target.selectedOptions)">
+                        <!-- Modules avec app=true -->
+                        <optgroup label="Modules disponibles">
+                          <option *ngFor="let module of listmoduleAppTrue" [value]="module.id">{{ module.nom }}</option>
+                        </optgroup>
+                        <!-- Modules avec app=false (affichés uniquement si CRM est sélectionné) -->
+                        <optgroup *ngIf="showAdditionalModules" label="Modules additionnels">
+                          <option *ngFor="let module of listmoduleAppFalse" [value]="module.id">{{ module.nom }}</option>
+                        </optgroup>
+                      </select>
+                    </div>
+                  </div>
+      
+                  <!-- Buttons -->
+                  <div class="col-lg-12">
+                    <div class="text-end">
+                      <button type="button" class="btn btn-outline-secondary me-1" (click)="add.hide()">Annuler</button>
+                      <button type="submit" id="addNewOrder-btn" class="btn btn-success">Ajouter</button>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      
