--- a/dashboard/src/app/pages/employe/list-employe-entreprise/list-employe-entreprise.component.html
+++ b/dashboard/src/app/pages/employe/list-employe-entreprise/list-employe-entreprise.component.html
@@ -21,6 +21,7 @@
               <th class="align-middle">Email</th>
               <th class="align-middle">État administrative</th>
               <th class="align-middle">Date de création</th>
+              <th class="align-middle">Modules</th>
               <th class="align-middle">Action</th>
             </tr>
           </thead>
@@ -28,6 +29,7 @@
             <tr>
               <td>{{data.email}}</td>
               <td>
+                <div class="d-flex gap-3">
                 <span class="badge badge-pill font-size-11"
                       [ngClass]="{ 
                         'badge-soft-warning': !data.isverified,
@@ -35,8 +37,17 @@
                       }">
                   {{data.isverified ? 'Vérifié' : 'En attente'}}
                 </span>
+                <a *ngIf="userType === 'admin'" href="javascript:void(0);" class="text-danger" (click)="verif(data.id)">
+                  <i class="mdi font-size-18" 
+                     [ngClass]="{'mdi-check-circle text-success': !data.isverified, 'mdi-close-circle text-danger': data.isverified}">
+                  </i>
+                </a>                
+              </div>
               </td>
               <td>{{data.createdAt | date:'yyyy-MM-dd HH:mm'}}</td>
+              <td>
+                <a [routerLink]="['/modules',data.id]" class="list-group-item" style="cursor: pointer;"><i class="fas fa-folder"></i></a>
+              </td>
               
               
               <td>
