--- a/dashboard/src/app/layouts/topbar/topbar.component.html
+++ b/dashboard/src/app/layouts/topbar/topbar.component.html
@@ -22,7 +22,7 @@
         </a>
       </div>
 
-      <button type="button" class="btn btn-sm px-3 font-size-16 header-item" id="vertical-menu-btn"
+      <button *ngIf="userType === 'admin' || userType==='entreprise'" type="button" class="btn btn-sm px-3 font-size-16 header-item" id="vertical-menu-btn"
               (click)="toggleMobileMenu($event)">
         <i class="fa fa-fw fa-bars"></i>
       </button>
@@ -30,7 +30,7 @@
 
     <div class="d-flex">
       <!-- Search Bar (Mobile Only) -->
-      <div class="dropdown d-inline-block d-lg-none ms-2" dropdown>
+      <div *ngIf="userType === 'admin' || userType==='entreprise'" class="dropdown d-inline-block d-lg-none ms-2" dropdown>
         <button type="button" class="btn header-item noti-icon" id="page-header-search-dropdown" data-toggle="dropdown"
                 aria-haspopup="true" dropdownToggle aria-expanded="false">
           <i class="mdi mdi-magnify"></i>
