--- a/dashboard/src/app/pages/article/article.component.html
+++ b/dashboard/src/app/pages/article/article.component.html
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="d-flex justify-content-end mb-2">
-        <button type="button" class="btn btn-success" (click)="addModal()">+ Ajouter</button>
+        <button *ngIf="crmPermissions?.ajouter" type="button" class="btn btn-success" (click)="addModal()">+ Ajouter</button>
     </div>
 
     <div class="table-responsive mb-0">
@@ -27,8 +27,8 @@
                     <td>{{ article.quantite }}</td>
                     <td>
                         <div class="d-flex gap-3">
-                            <a href="javascript:void(0);" class="text-success" (click)="editModal(article)"><i class="mdi mdi-pencil font-size-18"></i></a>
-                            <a href="javascript:void(0);" class="text-danger" (click)="deleteModule(article.id)"><i class="mdi mdi-delete font-size-18"></i></a>
+                            <a *ngIf="crmPermissions?.modifier" href="javascript:void(0);" class="text-success" (click)="editModal(article)"><i class="mdi mdi-pencil font-size-18"></i></a>
+                            <a *ngIf="crmPermissions?.supprimer" href="javascript:void(0);" class="text-danger" (click)="deleteModule(article.id)"><i class="mdi mdi-delete font-size-18"></i></a>
                               
                               
                         </div>
