gestion des factures achats frontend

--- a/dashboard/src/app/pages/achat/achat.component.html
+++ b/dashboard/src/app/pages/achat/achat.component.html
@@ -14,7 +14,7 @@
             <div class="card shadow-sm">
                 <div class="card-body text-center">
                     <h5 class="card-title">Facture Achat</h5>
-                    <a routerLink="" class="btn btn-primary">Ouvrir</a>
+                    <a routerLink="/factureachat" class="btn btn-primary">Ouvrir</a>
                 </div>
             </div>
         </div>
