--- a/dashboard/src/app/pages/commande-achat/commande-achat.component.html
+++ b/dashboard/src/app/pages/commande-achat/commande-achat.component.html
@@ -23,6 +23,7 @@
                   <th class="align-middle">Prix HT</th>
                   <th class="align-middle">TVA</th>
                   <th class="align-middle">Net à Payer</th>
+                  <th class="align-middle">Date de livraison</th>
                   <th class="align-middle">Aperçu</th>
                   <th class="align-middle">Télécharger</th>
                   <th class="align-middle">Actions</th>
@@ -35,6 +36,7 @@
                   <td>{{ commande.priceHt }}</td>
                   <td>{{ commande.tva }}</td>
                   <td>{{ commande.netApayer }}</td>
+                  <td>{{ commande.deliveryDate | date:'yyyy-MM-dd' }}</td>
                   <td>
                       <a [routerLink]="[commande.nomFichier,commande.id]" class="list-group-item" style="cursor: pointer;">
                           <i class="dripicons-preview"></i>
