gestion des receptions et devis

--- a/dashboard/src/app/pages/achat/achat.component.html
+++ b/dashboard/src/app/pages/achat/achat.component.html
@@ -22,7 +22,7 @@
             <div class="card shadow-sm">
                 <div class="card-body text-center">
                     <h5 class="card-title">Bon de réception</h5>
-                    <a routerLink="" class="btn btn-primary">Ouvrir</a>
+                    <a routerLink="/receptionachat" class="btn btn-primary">Ouvrir</a>
                 </div>
             </div>
         </div>
