--- a/dashboard/src/app/pages/vente/vente.component.html
+++ b/dashboard/src/app/pages/vente/vente.component.html
@@ -6,7 +6,7 @@
             <div class="card shadow-sm">
                 <div class="card-body text-center">
                     <h5 class="card-title">Devis</h5>
-                    <a routerLink="" class="btn btn-primary">Ouvrir</a>
+                    <a routerLink="/devis" class="btn btn-primary">Ouvrir</a>
                 </div>
             </div>
         </div>
