--- a/dashboard/src/app/pages/devisfile/devisfile.component.html
+++ b/dashboard/src/app/pages/devisfile/devisfile.component.html
@@ -1,1 +1,3 @@
-<p>devisfile works!</p>
+<div *ngIf="blobUrl">
+    <iframe [src]="blobUrl" [attr.type]="mimeType" style="width: 100%; height: 100vh;"></iframe>
+  </div>
